[package]
name = "stacker_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
rand = { version = "0.10.0", default-features = false, features = ["serde"] }
rand_chacha = { version = "0.10.0", default-features = false, features = [
    "serde",
] }
thiserror = { version = "2.0.17", default-features = false }
heapless = { version = "0.9.2", default-features = false, features = ["serde"] }
serde-big-array = "0.5.1"
