[package]
name = "stacker-engine"
version = "0.1.0"
edition = "2024"
description = "Core stacker game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/x-gkm/stacker-engine"

[dependencies]
rand = { version = "0.10.0", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
heapless = { version = "0.9.2", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

serde-big-array = { version = "0.5.1", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
], optional = true }


[features]
default = []
serde = ["dep:serde", "dep:serde-big-array", "rand/serde", "rand_chacha/serde", "heapless/serde"]
